--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 Application should run from the command line and should have the following features:
 
 - Users can add an expense with a description and amount.  (Completed)
-- Users can update an expense.  (In Progress)
+- Users can update an expense.  (Completed)
 - Users can delete an expense.  (In Progress)
 - Users can view all expenses.  (Ready)
 - Users can view a summary of all expenses.  (Ready)
